 - added a new tab in the GPU renderer for viewing the generated gpu-flame-parameters
 - displaying the name of variations where no code could be found
 - added a new option to enable automatic synchronization of changes between the Main Editor and GPU renderer

V6.50 (11.04.2021)
 - Introducing variation-filters, based on variation-profiles and variation-types.
   They will improve usability a lot by simplifying the selection of variations/"plugins" by selecting
   and combining variation-types.
   The variation-types are internally defined and connected to the variation by the variation author.
   A variation may have any number of variation-types. e.g. "blur3d" is both of type BLUR and 3D.
   Profiles are not restricted to the use of variation-types, you may also create profile containing a list of any variations.
   For example. you can create a profile which contains well-proved variations to use inside a splits-elliptic-setup.
   You can also exclude variations.
   You may combine up to two profiles. E.g. to combine your own profile with the internal categories, like "Baseshape".
   E.g., when you  chose your own profile together with the predefined "Baseshape", you get only base-shape-variations
   from your list. (a "Baseshape" is a variation which creates a shape/fractal on its own, like "square")
 - This is the first version of an official user manual.
   Thanks to Brad Stefanov, D. Aaron Sawyer, Nancy Pierce, my wife Patricia Maschke and Rick Sidwell for reviewing it!
   Because it is also a public project, you can view the latest version of the manual always directly on GitHub: https://github.com/thargor6/JWildfire/blob/master/manual/src/docs/asciidoc/JWildfire_manual.adoc
   The final manual can be reached from within the program under the "Help -> User manual" or in the file system inside the lib-subfolder (JWildfire_manual.pdf).
 - ply/PointCloud-export now generates two additional fields: pscale and intensity