@@ -1,6 +1,6 @@
 /*
   JWildfire - an image and animation processor written in Java 
-  Copyright (C) 1995-2011 Andreas Maschke
+  Copyright (C) 1995-2021 Andreas Maschke
 
   This is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser 
   General Public License as published by the Free Software Foundation; either version 2.1 of the 
@@ -19,7 +19,7 @@ package org.jwildfire.create.tina.variation;
 import org.jwildfire.create.tina.base.XForm;
 import org.jwildfire.create.tina.base.XYZPoint;
 
-public class BentFunc extends SimpleVariationFunc {
+public class BentFunc extends SimpleVariationFunc implements SupportsGPU {
   private static final long serialVersionUID = 1L;
 
   @Override
@@ -44,7 +44,28 @@ public class BentFunc extends SimpleVariationFunc {
 
   @Override
   public VariationFuncType[] getVariationTypes() {
-    return new VariationFuncType[]{VariationFuncType.VARTYPE_2D};
+    return new VariationFuncType[]{VariationFuncType.VARTYPE_2D, VariationFuncType.VARTYPE_SUPPORTS_GPU};
   }
 
+  @Override
+  public String getGPUCode(FlameTransformationContext context) {
+    // based on code from the cudaLibrary.xml compilation, created by Steven Brodhead Sr.
+    return "if (__x < 0.f)\n"
+        + "{\n"
+        + "    __px += varpar->bent*2.f*__x;\n"
+        + "}\n"
+        + "else\n"
+        + "{\n"
+        + "    __px += varpar->bent*__x;\n"
+        + "}\n"
+        + "if (__y < 0.f)\n"
+        + "{\n"
+        + "    __py += varpar->bent*.5f*__y;\n"
+        + "}\n"
+        + "else\n"
+        + "{\n"
+        + "    __py += varpar->bent*__y;\n"
+        + "}\n"
+        + (context.isPreserveZCoordinate() ? "__pz += varpar->bent*__z;\n" : "");
+  }
 }
