@@ -1,6 +1,6 @@
 /*
   JWildfire - an image and animation processor written in Java 
-  Copyright (C) 1995-2011 Andreas Maschke
+  Copyright (C) 1995-2021 Andreas Maschke
 
   This is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser 
   General Public License as published by the Free Software Foundation; either version 2.1 of the 
@@ -21,7 +21,7 @@ import org.jwildfire.create.tina.base.XYZPoint;
 
 import static org.jwildfire.base.mathlib.MathLib.*;
 
-public class ExFunc extends SimpleVariationFunc {
+public class ExFunc extends SimpleVariationFunc implements SupportsGPU {
   private static final long serialVersionUID = 1L;
 
   @Override
@@ -46,7 +46,18 @@ public class ExFunc extends SimpleVariationFunc {
 
   @Override
   public VariationFuncType[] getVariationTypes() {
-    return new VariationFuncType[]{VariationFuncType.VARTYPE_2D};
+    return new VariationFuncType[]{VariationFuncType.VARTYPE_2D, VariationFuncType.VARTYPE_SUPPORTS_GPU};
   }
 
+  @Override
+  public String getGPUCode(FlameTransformationContext context) {
+    // based on code from the cudaLibrary.xml compilation, created by Steven Brodhead Sr.
+    return "float m0 = sinf(__phi+__r);\n"
+        + "float m1 = cosf(__phi-__r);\n"
+        + "m0 = __r*m0*m0*m0;\n"
+        + "m1 = __r*m1*m1*m1;\n"
+        + "__px += varpar->ex*(m0+m1);\n"
+        + "__py += varpar->ex*(m0-m1);\n"
+        + (context.isPreserveZCoordinate() ? "__pz += varpar->ex*__z;\n" : "");
+  }
 }
