@@ -1,6 +1,6 @@
 /*
   JWildfire - an image and animation processor written in Java 
-  Copyright (C) 1995-2011 Andreas Maschke
+  Copyright (C) 1995-2021 Andreas Maschke
 
   This is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser 
   General Public License as published by the Free Software Foundation; either version 2.1 of the 
@@ -19,7 +19,7 @@ package org.jwildfire.create.tina.variation;
 import org.jwildfire.create.tina.base.XForm;
 import org.jwildfire.create.tina.base.XYZPoint;
 
-public class ShredlinFunc extends VariationFunc {
+public class ShredlinFunc extends VariationFunc implements SupportsGPU {
   private static final long serialVersionUID = 1L;
 
   private static final String PARAM_X_DISTANCE = "xdistance";
@@ -87,7 +87,25 @@ public class ShredlinFunc extends VariationFunc {
 
   @Override
   public VariationFuncType[] getVariationTypes() {
-    return new VariationFuncType[]{VariationFuncType.VARTYPE_2D};
+    return new VariationFuncType[]{VariationFuncType.VARTYPE_2D, VariationFuncType.VARTYPE_SUPPORTS_GPU};
   }
 
+  @Override
+  public String getGPUCode(FlameTransformationContext context) {
+    // based on code from the cudaLibrary.xml compilation, created by Steven Brodhead Sr.
+    return "float sxd = varpar->shredlin_xdistance;\n"
+        + "float sxw = varpar->shredlin_xwidth;\n"
+        + "float syd = varpar->shredlin_ydistance;\n"
+        + "float syw = varpar->shredlin_ywidth;\n"
+        + "float vv  = varpar->shredlin;\n"
+        + "\n"
+        + "float xpos = __x < 0 ? 1.f : 0.f;\n"
+        + "float ypos = __y < 0 ? 1.f : 0.f;\n"
+        + "float xrng = __x / sxd;\n"
+        + "float yrng = __y / syd;\n"
+        + "\n"
+        + "__px += vv * sxd * ((xrng - (int)xrng) * sxw + (int)xrng + (0.5f - xpos) * (1.f - sxw));\n"
+        + "__py += vv * syd * ((yrng - (int)yrng) * syw + (int)yrng + (0.5f - ypos) * (1.f - syw));\n"
+        + (context.isPreserveZCoordinate() ? "__pz += varpar->shredlin * __z;\n" : "");
+  }
 }
