@@ -1,6 +1,6 @@
 /*
   JWildfire - an image and animation processor written in Java 
-  Copyright (C) 1995-2011 Andreas Maschke
+  Copyright (C) 1995-2021 Andreas Maschke
 
   This is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser 
   General Public License as published by the Free Software Foundation; either version 2.1 of the 
@@ -21,7 +21,7 @@ import org.jwildfire.create.tina.base.XYZPoint;
 
 import static org.jwildfire.base.mathlib.MathLib.*;
 
-public class TanhFunc extends SimpleVariationFunc {
+public class TanhFunc extends SimpleVariationFunc implements SupportsGPU {
   private static final long serialVersionUID = 1L;
 
   @Override
@@ -52,7 +52,17 @@ public class TanhFunc extends SimpleVariationFunc {
 
   @Override
   public VariationFuncType[] getVariationTypes() {
-    return new VariationFuncType[]{VariationFuncType.VARTYPE_2D};
+    return new VariationFuncType[]{VariationFuncType.VARTYPE_2D, VariationFuncType.VARTYPE_SUPPORTS_GPU};
   }
 
+  @Override
+  public String getGPUCode(FlameTransformationContext context) {
+    // based on code from the cudaLibrary.xml compilation, created by Steven Brodhead Sr.
+    return "float d = (cosf(2.f*__y)+coshf(2.f*__x));"
+        + "if(d==0.f) return;"
+        +  "float tanhden = 1.f/d;\n"
+        + "__px += varpar->tanh*tanhden*sinhf(2.f*__x);\n"
+        + "__py += varpar->tanh*tanhden*sinf(2.f*__y);\n"
+        + (context.isPreserveZCoordinate() ? "__pz += varpar->tanh*__z;\n" : "");
+  }
 }
