@@ -968,7 +968,9 @@ public class VariationFuncList {
     registerVariationFunc(PostBenesiCropFunc.class);
     registerVariationFunc(PostCoastalbrotCropFunc.class);
     registerVariationFunc(PostAmazingSurfCropFunc.class);    
-    registerVariationFunc(DC_GenericMandelbrootFunc.class);    
+    registerVariationFunc(DC_GenericMandelbrootFunc.class);
+
+    registerVariationFunc(OvoidFunc.class);
 
     resolvedAliasMap = new HashMap<>();
     for (Entry<Class<? extends VariationFunc>, String> funcCls : aliasMap.entrySet()) {
